--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=Morrigan*2003
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+api.security.token.secret=${JWT_SECRET:12345678}
